--- a/package.json
+++ b/package.json
@@ -2,12 +2,18 @@
   "name": "next13",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "dev": "nx run-many --target=serve",
+    "predev": "docker compose up -d",
+    "start": "nx serve",
+    "build": "nx build",
+    "test": "nx test"
+  },
   "private": true,
   "dependencies": {
     "@nrwl/next": "15.4.1",
     "core-js": "^3.6.5",
-    "next": "13.0.0",
+    "next": "^13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "regenerator-runtime": "0.13.7",
